{
    "name": "PlayerMovement",
    "maps": [
        {
            "name": "Player Move",
            "id": "ebd7965f-8a44-42de-80c0-df875f3f043b",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "bbd84c4f-c13e-4ef1-81c9-758efed2f054",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Sprint",
                    "type": "Value",
                    "id": "5ae27ce2-8ccf-4b85-b512-439dc38f0acb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "398f803d-fa46-4791-8817-6503c9df0e35",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6f20e9d0-bb94-461f-ad0e-956032eec5a6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4af11385-c9bc-4d0f-80b2-f2461228491a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c5901695-e9a0-4098-a9db-03b5062cfb45",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2609f9a9-4452-4b93-a7b9-147d565678e5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8d4a9758-add4-41cb-9b81-c13a5c399187",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Action",
            "id": "402d81ac-df03-455f-8588-5c438843c8cc",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "c7d8a9b8-1b05-4712-9439-e3912f5dbcd9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "ec9a5bae-6b5a-4b5b-b4b0-cf48636c5c95",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "effdeed3-450f-4956-b365-b763d05d6168",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "23226e91-dbcc-48cf-90cc-58412e2decce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponSkill",
                    "type": "Button",
                    "id": "90c5e2dc-600c-46ed-a6ce-c1437d81aadc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Charge",
                    "type": "Button",
                    "id": "1d81c6a2-9c9d-4aeb-a6db-7d5fbe3cab7d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4558ef0c-6654-45ed-8b92-3eaa63c5e9d4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efe21e60-0119-4c3a-aacd-31d3a2b1bd9c",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e934f28-725a-4301-965a-ba01dfa3c912",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa585c35-27fd-48a7-8b80-5f7766381dbf",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aaacc5fd-a0d4-494b-8320-ff363d73f97d",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba0edc0a-f6f2-4ebe-a805-35629a95574b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Charge",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Weapon Swap",
            "id": "3dda5b09-7a59-43cc-8284-0049aa32694a",
            "actions": [
                {
                    "name": "SwordAndShield",
                    "type": "Button",
                    "id": "7df08787-9c74-4a10-80f0-ebe9c95178c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SingleTwoHandeSword",
                    "type": "Button",
                    "id": "739602bf-c589-4845-a6d5-09817df6102b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DoubleSwords",
                    "type": "Button",
                    "id": "bb934f83-d556-4244-bdcd-6ff9bc5c334d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BowAndArrow",
                    "type": "Button",
                    "id": "d5a56389-dce5-4d47-ab1a-1cba3391e543",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MagicWand",
                    "type": "Button",
                    "id": "79988e35-5e2c-4fc3-bb05-bb47f9c120fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "74d87cd7-da90-422d-a423-4e31a1b3fde9",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordAndShield",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ec1c864-f27f-4e30-a18a-7e7360dfa288",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SingleTwoHandeSword",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2363e2d-e075-4629-86a8-17b99113b3c2",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DoubleSwords",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0b572f0-19d9-445a-8ee1-98a4337c9391",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BowAndArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab406a17-a4c8-46ef-ac77-a3d4db731c25",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MagicWand",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerMagic",
            "id": "9850ee9d-e789-4821-8633-fd2a6ce4b7cf",
            "actions": [
                {
                    "name": "Magic1",
                    "type": "Button",
                    "id": "a4f8d6c7-2ef0-4e31-9db8-b86851b9b46a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Magic2",
                    "type": "Button",
                    "id": "545467f0-3035-4b1d-ae09-61f24d0e9e35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cec5e789-530a-44b6-b52c-116379fcf940",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Magic1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52a8149a-7225-49b8-9ac9-094997a2ee9a",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Magic2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UnitControl",
            "id": "6bb3b6e9-e411-4df3-a43b-38d822b3bacc",
            "actions": [
                {
                    "name": "Select",
                    "type": "Value",
                    "id": "78da9b96-9ec2-4d90-97b4-577bb89da2f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=1.401298E-45,pressPoint=0.1)",
                    "initialStateCheck": true
                },
                {
                    "name": "Command_Move",
                    "type": "Button",
                    "id": "44a92fff-3587-4f19-b084-446397cf02cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Specify_Warrior",
                    "type": "Value",
                    "id": "14d1d5f4-2cf9-46db-8aac-3e2a7c61ec34",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.2)",
                    "initialStateCheck": true
                },
                {
                    "name": "Specify_Mage",
                    "type": "Value",
                    "id": "4580fcbd-af8f-4b5d-9eb2-377810663ecd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.2)",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9deb958b-072c-4059-9429-3d4934d431e3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "277858c6-62e9-4209-80f6-22ec9ecdbc5a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Command_Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fee7b5b8-fb2b-4b28-b619-8f8d79784e84",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Specify_Warrior",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bce7ace6-a985-47d5-804f-7db6787af087",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Specify_Mage",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraControl",
            "id": "c0e1591a-ae5a-4b9c-9df3-608339a2ec69",
            "actions": [
                {
                    "name": "Transition",
                    "type": "Value",
                    "id": "58c1c5d9-318c-4a2f-920c-9b70452e9890",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ToggleBuild",
                    "type": "Button",
                    "id": "5fab4733-e999-40b7-9163-e2d6f1e1d491",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpawnPoint_Select",
                    "type": "Button",
                    "id": "4ff3967c-f7b1-4623-a030-0bd2719a24fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c4f862ed-21bb-4031-9475-33eee5c58b5f",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Transition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71635db5-32a2-4edb-b874-370c0e2d7237",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleBuild",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d19a8443-b3c2-41cd-9dcd-cc16fbea2bf8",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnPoint_Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": []
        }
    ]
}